# eval-exec-neomacs

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.arch  Dockerfile.debian  Dockerfile.ubuntu  Makefile.in  README.md  configure.ac  flake.nix  shell.nix
neovm-core/: Cargo.toml  build.rs
neovm-core/examples/: compat_runner.rs  introspection_bench.rs  load_cache_bench.rs  precompile_neoc.rs
neovm-core/proptest-regressions/elisp/oracle/: end-of-line.txt
neovm-core/proptest-regressions/emacs_core/oracle/: assoc.txt  assq.txt  buffer-name.txt  buffer-string.txt
neovm-core/src/: encoding.rs  face.rs  keyboard.rs  lib.rs  window.rs
neovm-core/src/buffer/: buffer.rs  gap_buffer.rs  mod.rs  overlay.rs  text_props.rs  undo.rs
neovm-core/src/emacs_core/: abbrev.rs  abbrev_test.rs  advice.rs  advice_test.rs  autoload.rs  autoload_test.rs  bookmark.rs  bookmark_test.rs  buffer_vars.rs  builtin_registry.rs  builtin_registry_test.rs  builtins_extra.rs  builtins_extra_test.rs  casefiddle.rs  casefiddle_test.rs  casetab.rs  casetab_test.rs  category.rs  category_test.rs  ccl.rs  ccl_test.rs  charset.rs  charset_test.rs  chartable.rs  chartable_test.rs  cl_lib.rs  cl_lib_test.rs  coding.rs  coding_test.rs  comp.rs  comp_test.rs  compat_regressions.rs  compat_regressions_test.rs  composite.rs  composite_test.rs  custom.rs  custom_test.rs  dbus.rs  dbus_test.rs  debug.rs  (+108 more)
neovm-core/src/emacs_core/buffer/: mod.rs
neovm-core/src/emacs_core/builtins/: arithmetic.rs  buffers.rs  collections.rs  cons_list.rs  higher_order.rs  hooks.rs  keymaps.rs  misc_eval.rs  misc_pure.rs  mod.rs  search.rs  strings.rs  stubs.rs  symbols.rs  tests.rs  types.rs
neovm-core/src/emacs_core/bytecode/: chunk.rs  chunk_test.rs  compiler.rs  compiler_test.rs  decode.rs  decode_test.rs  mod.rs  opcode.rs  opcode_test.rs  vm.rs  vm_test.rs
neovm-core/src/emacs_core/data/: mod.rs
neovm-core/src/emacs_core/dispnew/: pure.rs  tests.rs
neovm-core/src/emacs_core/keyboard/: mod.rs  pure.rs  pure_test.rs  tests.rs
neovm-core/src/emacs_core/oracle/: backquote-advanced.rs  buffer-position.rs  (+136 more)
neovm-core/src/gc/: heap.rs  heap_test.rs  mod.rs  types.rs  types_test.rs
rust/neomacs-bin/: Cargo.toml
rust/neomacs-bin/src/: main.rs
(+2957 files in other folders)
