[package]
name = "neovm-core"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
description = "Core runtime structures for NeoVM"

[features]
default = ["core-backend-rust"]
core-backend-emacs-c = []
core-backend-rust = []

[dependencies]
neovm-host-abi = { path = "../neovm-host-abi" }
libc = "0.2"
regex = "1"
sha1 = "0.10"
sha2 = "0.10"
strum = { version = "0.26", features = ["derive"] }
tracing = { version = "0.1", features = ["attributes"] }
stacker = "0.1"
dns-lookup = "2"
network-interface = "2"
libloading = "0.8"

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
proptest = "1.6"
tempfile = "3"

[lints.rust]
unused_imports = "allow"
unused_variables = "allow"
dead_code = "allow"
