[package]
name = "neomacs-bin"
version = "0.1.0"
edition = "2021"
authors = ["Neomacs Contributors"]
license = "GPL-3.0-or-later"
description = "Standalone Rust binary for Neomacs (no C dependency)"

[[bin]]
name = "neomacs"
path = "src/main.rs"

[dependencies]
neomacs-display = { path = "../neomacs-display", default-features = false, features = ["core-backend-rust"] }
neovm-core = { path = "../neovm-core", default-features = false, features = ["core-backend-rust"] }

# Utilities
tracing = { version = "0.1", features = ["attributes"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
crossbeam-channel = "0.5"
libc = "0.2"

[profile.release]
lto = true
codegen-units = 1
